-- SQL dump generated using DBML (dbml.dbdiagram.io)
-- Database: PostgreSQL
-- Generated at: 2025-07-30T15:28:15.886Z

CREATE TABLE "planning_applications" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "reference" varchar(50) UNIQUE NOT NULL,
  "address" text,
  "postcode" text,
  "description" text,
  "latitude" float,
  "longitude" float,
  "radius" integer,
  "created_at" timestamp,
  "updated_at" timestamp,
  "consultation_start_date" timestamp,
  "consultation_end_date" timestamp,
  "application_decision_date" timestamp,
  "assessment_decision_date" timestamp,
  "appeal_decision_date" timestamp,
  "assessment_decision_id" integer,
  "process_stage_id" integer NOT NULL,
  "application_status_id" integer NOT NULL
);

CREATE TABLE "assessment_decisions" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "decision" varchar(20) UNIQUE NOT NULL
);

CREATE TABLE "process_stages" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "stage" varchar(30) UNIQUE NOT NULL
);

CREATE TABLE "application_statuses" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "status" varchar(30) UNIQUE NOT NULL
);

ALTER TABLE "planning_applications" ADD FOREIGN KEY ("assessment_decision_id") REFERENCES "assessment_decisions" ("id");

ALTER TABLE "planning_applications" ADD FOREIGN KEY ("process_stage_id") REFERENCES "process_stages" ("id");

ALTER TABLE "planning_applications" ADD FOREIGN KEY ("application_status_id") REFERENCES "application_statuses" ("id");
